# ProStatA

./: .gitignore  README.md
examples/: Makefile  druhe.c  glob.c  minimal-fcs.c  minimal.c  osmy.c  paty.c  sedmy.c  sesty.c  stvrty.c  treti.c
passes/: CMakeLists.txt  Makefile  all_inline.hh  elim_const_expr.cc  elim_const_expr.hh  elim_phi.cc  elliminate_undefined.cc  elliminate_undefined.hh  global_vars.cc  global_vars.hh  lower_mem.cc  lower_mem.hh  lower_select.cc  nameblocks.cc  nameblocks.hh  nestedgep.cc  nestedgep.hh  passes.hh  test.cc  test.sh.in  undef2var.cc  undef2var.hh
tests/: test.sh
tests/elim-const-expr/: 01.c  02.c  03.c
tests/elim-phi/: 01.c  02.c
tests/global-vars/: 01.c  02.c  03.c  04.c  05.c  06.c  07.c  08.c  09.c  10.c
tests/global-vars -elim-const-expr/: 04.c
tests/lowermem/: 01.c  02.c  03.c  04.c  05.c  06.c  07.c  08.c  09.c  10.c  11.c  12.c  13.c  14.c  15.c
tests/lowerselect/: 01.c  02.c  03.c
tests/mem2reg -elim-phi/: 03.c
tests/nestedgep/: 01.c
